fix z-index hierarchy for tabbed layout

--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .optimize-legibility {
+    text-rendering: optimizeLegibility;
+  }
+}
+
 
